--- a/YDev.Web/Views/Shared/Partial/Home/_Slider.cshtml
+++ b/YDev.Web/Views/Shared/Partial/Home/_Slider.cshtml
@@ -1,79 +1,18 @@
+@using YDev.Common.Models
+@model List<Slider>
+
 <div class="tp-banner-container">
     <div class="tp-banner">
         <ul>
-            <li data-slotamount="7" data-transition="incube" data-masterspeed="1000" data-saveperformance="on">
-                <img alt="" src="images/slider/slider1.jpg" data-lazyload="images/slider/slider1.jpg">
-                <div class="caption lft large-title tp-resizeme main-bg padd-horizontal-20" data-x="center" data-y="160" data-speed="600" data-start="1000">It is EXCEPTION</div>
-                <div class="caption lft large-title tp-resizeme witTxt" data-x="center" data-y="230" data-speed="600" data-start="1600">EXPECT THE UNEXPECTED</div>
-                <div class="caption lfl larger-text tp-resizeme witTxt" data-x="270" data-y="300" data-speed="600" data-start="1800">Be distinct</div>
-                <div class="caption lft larger-text tp-resizeme witTxt" data-x="420" data-y="300" data-speed="600" data-start="2000">.</div>
-                <div class="caption lfb larger-text tp-resizeme witTxt" data-x="440" data-y="300" data-speed="600" data-start="2200">Be Elegent</div>
-                <div class="caption lft larger-text tp-resizeme witTxt" data-x="585" data-y="300" data-speed="600" data-start="2400">.</div>
-                <div class="caption lfr larger-text tp-resizeme witTxt" data-x="600" data-y="300" data-speed="600" data-start="2600">Be Different</div>
-            </li>
-            <li data-slotamount="7" data-transition="3dcurtain-vertical" data-masterspeed="1000" data-saveperformance="on">
-                <img alt="" src="images/slider/slider2.png" data-lazyload="images/slider/slider2.png">
-                <div class="caption lft large-title tp-resizeme witTxt light-font" data-x="0" data-y="196" data-speed="600" data-start="1600">Perfect Theme For</div>
-                <div class="caption lfb large-title tp-resizeme witTxt" data-x="0" data-y="240" data-speed="600" data-start="1800">Your Company</div>
-                <div class="caption sfr large-desc tp-resizeme lft-list" data-x="720" data-y="120" data-speed="600" data-start="2500"><i class="fa fa-desktop rounded-bord"></i> 100% Responsive</div>
-                <div class="caption sfr large-desc tp-resizeme lft-list" data-x="720" data-y="170" data-speed="600" data-start="2700"><i class="fa fa-file-image-o rounded-bord"></i>Retina Ready</div>
-                <div class="caption sfr large-desc tp-resizeme lft-list" data-x="720" data-y="220" data-speed="600" data-start="2900"><i class="fa fa-leaf rounded-bord"></i>Unlimited colors</div>
-                <div class="caption sfr large-desc tp-resizeme lft-list" data-x="720" data-y="270" data-speed="600" data-start="3100"><i class="fa fa-copy rounded-bord"></i>Unlimited pages</div>
-                <div class="caption sfr large-desc tp-resizeme lft-list" data-x="720" data-y="320" data-speed="600" data-start="3300"><i class="fa fa-crosshairs rounded-bord"></i>Super Featured</div>
-                <div class="caption sfb large-desc tp-resizeme lft-list" data-x="400" data-y="380" data-speed="600" data-start="3300"><a class="wit-border" href="#">Take A tour</a></div>
-            </li>
-            <li data-slotamount="7" data-transition="curtain-3" data-masterspeed="1000" data-saveperformance="on">
-                <img alt="" src="images/slider/slider3.jpg" data-lazyload="images/slider/slider3.jpg">
-                <div class="caption sft slide-head witTxt tp-resizeme" data-x="center" data-y="50" data-speed="400" data-start="1000">What people Look for ?</div>
-                <div class="caption sfl wit-line" data-x="190" data-y="70" data-speed="400" data-start="1200"></div>
-                <div class="caption sfr wit-line" data-x="720" data-y="70" data-speed="400" data-start="1200"></div>
-                <div class="caption sfl witTxt large-desc bull tp-resizeme" data-x="40" data-y="150" data-speed="400" data-start="1400">More web site stability</div>
-                <div class="caption sfl witTxt large-desc bull tp-resizeme" data-x="40" data-y="200" data-speed="400" data-start="1600">Easily Customizable Layout</div>
-                <div class="caption sfl witTxt large-desc bull tp-resizeme" data-x="40" data-y="250" data-speed="400" data-start="1800">Retina Ready Template</div>
-                <div class="caption sfl witTxt large-desc bull tp-resizeme" data-x="40" data-y="300" data-speed="400" data-start="2000">Fast Standerd Coding</div>
-                <div class="caption sfl witTxt large-desc bull tp-resizeme" data-x="40" data-y="350" data-speed="400" data-start="2200">Usability and User Experience</div>
-                <div class="caption sfl witTxt large-desc bull tp-resizeme" data-x="40" data-y="400" data-speed="400" data-start="2400">24/7 Fully Customer support</div>
-                <div class="caption sfl vert-line" data-x="10" data-y="150" data-speed="400" data-start="1000"></div>
-                <div class="caption sfl wit-line" data-x="0" data-y="160" data-speed="400" data-start="1200" style="width:30px"></div>
-                <div class="caption sfl wit-line" data-x="0" data-y="210" data-speed="400" data-start="1400" style="width:30px"></div>
-                <div class="caption sfl wit-line" data-x="0" data-y="260" data-speed="400" data-start="1600" style="width:30px"></div>
-                <div class="caption sfl wit-line" data-x="0" data-y="310" data-speed="400" data-start="1800" style="width:30px"></div>
-                <div class="caption sfl wit-line" data-x="0" data-y="360" data-speed="400" data-start="2000" style="width:30px"></div>
-                <div class="caption sfl wit-line" data-x="0" data-y="410" data-speed="400" data-start="2200" style="width:30px"></div>
-                <div class="tp-caption customin main-title tp-resizeme main-bg"
-                     data-x="center" data-hoffset="0"
-                     data-y="210" data-voffset="0"
-                     data-customin="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:5;scaleY:5;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-                     data-speed="300"
-                     data-start="3000"
-                     data-easing="Power3.easeInOut"
-                     data-splitin="none"
-                     data-splitout="none"
-                     data-elementdelay="0.1"
-                     data-endelementdelay="0.1"
-                     data-endspeed="1000"
-                     style="z-index: 18; max-width: auto; max-height: auto; white-space: nowrap;padding:5px 10px;color:#fff">
-                    SO
-                </div>
-                <div class="caption sfl witTxt large-desc tp-resizeme" data-x="600" data-y="220" data-speed="400" data-start="3500" style="font-size:17px;text-transform:uppercase">It's Time for</div>
-                <div class="caption customin customout big-font witTxt tp-resizeme"
-                     data-x="600"
-                     data-y="230"
-                     data-splitin="chars"
-                     data-elementdelay="0.05"
-                     data-start="3800"
-                     data-speed="600"
-                     data-easing="Back.easeOut"
-                     data-easing="Back.easeOut"
-                     data-customin="x:350;y:200;z:0;rotationX:0;rotationY:0;rotationZ:-120;scaleX:8;scaleY:8;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:220% 190%;"
-                     data-splitout=""
-                     data-endelementdelay="0"
-                     data-customout="x:0;y:0;z:0;rotationX:0;rotationY:0;rotationZ:0;scaleX:0;scaleY:0;skewX:0;skewY:0;opacity:0;transformPerspective:600;transformOrigin:50% 50%;"
-                     data-end="90000"
-                     data-endspeed="1500"
-                     data-endeasing="Power3.easeInOut"
-                     data-captionhidden="on">EXCEPTION</div>
-            </li>
+            @foreach (var slide in Model)
+            {
+                <li data-slotamount="7" data-transition="random-premium" data-masterspeed="1000" data-saveperformance="on">
+                    <img alt="" src="https://admin.ihtiyacevim.com.tr/@slide.MediaUrl" data-lazyload="https://admin.ihtiyacevim.com.tr/@slide.MediaUrl">
+                    @*<div class="caption lft tp-resizeme witTxt light-font text-lowercase" data-x="0" data-y="196" data-speed="600" data-start="1600">@slide.Content</div>*@
+                    <div class="caption sfb tp-resizeme lft-list left" data-x="right" data-y="430" data-speed="600" data-start="1500"><a class="wit-border" href="@slide.Link">Detay</a></div>
+                </li>
+            }
+
         </ul>
     </div>
 </div>
