--- a/YDev.Admin/Views/Shared/_Layout.cshtml
+++ b/YDev.Admin/Views/Shared/_Layout.cshtml
@@ -33,16 +33,14 @@
     {
         <link href="~/assets/global/plugins/jquery-nestable/jquery.nestable.css" rel="stylesheet" type="text/css" />
     }
-    @if (nav.Contains("content"))
+    @if (nav.Contains("content") || nav.Contains("slider"))
     {
         <link href="~/assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
         <link href="~/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
-    }
-    @if (nav.Contains("content"))
-    {
         <link href="~/assets/global/plugins/bootstrap-summernote/summernote.css" rel="stylesheet" type="text/css" />
         <link href="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.css" rel="stylesheet" type="text/css" />
     }
+
     <!-- END PAGE LEVEL PLUGINS -->
     <!-- BEGIN THEME GLOBAL STYLES -->
     <link href="~/assets/global/css/components.min.css" rel="stylesheet" id="style_components" type="text/css" />
@@ -263,7 +261,7 @@
                         </a>
                     </li>
                     <li class='nav-item @(nav.Contains("slider") ? "start active" :"")'>
-                        <a href="/slider" class="nav-link nav-toggle">
+                        <a href="/sliderlar" class="nav-link nav-toggle">
                             <i class="icon-diamond"></i>
                             <span class="title">Slider Yönetimi</span>
                         </a>
@@ -422,7 +420,7 @@
         <script src="~/assets/global/plugins/jquery-nestable/jquery.nestable.js" type="text/javascript"></script>
         <script src="~/assets/pages/scripts/ui-nestable.min.js" type="text/javascript"></script>
     }
-    @if (nav.Contains("content"))
+    @if (nav.Contains("content") || nav.Contains("slider"))
     {
         <script src="~/assets/global/scripts/datatable.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
@@ -433,7 +431,9 @@
         <script src="~/assets/pages/scripts/components-editors.min.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/bootstrap-confirmation/bootstrap-confirmation.min.js" type="text/javascript"></script>
+        
         <script src="~/assets/custom/icerikekle.min.js" type="text/javascript"></script>
+        <script src="~/assets/custom/slider.js" type="text/javascript"></script>
     }
 
     <!-- END PAGE LEVEL SCRIPTS -->
