--- a/YDev.Admin/Views/Shared/_Layout.cshtml
+++ b/YDev.Admin/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                                     <h3>
                                         <span class="bold">12 pending</span> notifications
                                     </h3>
-                                    <a href="page_user_profile_1.html">view all</a>
+                                    <a href="#">view all</a>
                                 </li>
                                 <li>
                                     <ul class="dropdown-menu-list scroller" style="height: 250px;" data-handle-color="#637283">
