--- a/YDev.Web/wwwroot/css/style.css
+++ b/YDev.Web/wwwroot/css/style.css
@@ -1,4 +1,4 @@
-﻿/* ============================================================================
+/* ============================================================================
 	- CSS Document
 	- Theme Name: EXCEPTION Responsive Business HTML Template.
 	- Theme URI: http://demo.it-rays.com/exception
@@ -424,7 +424,7 @@ th, td, caption {
 ============================================================================= */
 /* ---- 3.1 Top bar ------------------ */
 .top-bar {
-	background: #ffd80e;
+	background: #dcae73;
 	font-size: 11px;
 }
 .top-bar.main-bg{
@@ -1941,7 +1941,7 @@ p {
     color:#fff
 }
 .welcome {
-	padding: 80px 0;
+	padding: 40px 0;
 	text-align: center;
 }
 .btn.ExtraLargeBtn {
@@ -2197,7 +2197,7 @@ blockquote span {
 	font-size:20px;
 }
 .footer-top .block-head {
-	border-bottom-color: #ffd80e;
+	border-bottom-color: #dcae73;
 	color: #fff;
 	text-transform: uppercase
 }
@@ -2291,13 +2291,13 @@ blockquote span {
 .box-top i.fa {
 	display: table;
 	margin: 0 auto 30px;
-	font-size: 38px;
-	width:103px;
-	height:103px;
-	line-height:95px;
+	font-size: 50px;
+	width:130px;
+	height:130px;
+	line-height:130px;
 	text-align:center;
 	border-radius:50%;
-	border:3px #fff solid;
+	border:1px #fff solid;
 	-moz-box-shadow: inset 0 0 13px rgba(0,0,0,.4);
 	-webkit-box-shadow: inset 0 0 13px rgba(0,0,0,.4);
 	box-shadow: inset 0 0 13px rgba(0,0,0,.4);
@@ -5870,13 +5870,13 @@ a.wit-btn {
 	
 }
 .footer-top a:hover {
-	color: #ffd80e;
+	color: #dcae73;
 }
 .footer-top a.btn {
 	color: #fff;
 }
 .footer-top a.btn:hover {
-	color: #ffd80e;
+	color: #dcae73;
 }
 
 .footer-top hr {
@@ -5917,7 +5917,7 @@ a.wit-btn {
 	color: #B5B5B5
 }
 .footer-top-2 .social-list li:hover span {
-	color: #ffd80e
+	color: #dcae73
 }
 .footer-menu-inline {
     float: right;
@@ -6092,7 +6092,7 @@ a.wit-btn {
 .footer-top .footer-menu a:before {
 	display: inline-block;
 	margin-right: 7px;
-	color: #ffd80e;
+	color: #dcae73;
 	content: "\f105";
 	font-family: FontAwesome;
 }
@@ -6113,7 +6113,7 @@ footer .NL {
 		margin-left: 10px;
 		padding-left: 25px;
 		width: 67%;
-		border: 1px #ffd80e solid;
+		border: 1px #dcae73 solid;
 		border-right: 0px;
 		background: transparent none;
 		color: #fff;
@@ -6128,17 +6128,17 @@ footer .NL {
 		top: 16px;
 		left: 24px;
 		display: inline-block;
-		color: #ffd80e;
+		color: #dcae73;
 		content: "\f0e0";
 		font-family: FontAwesome;
 	}
 	footer .NL .NL-btn {
-		background: #ffd80e;
+		background: #dcae73;
 		color: #fff;
 	}
 		footer .NL .NL-btn:hover {
 			background: #fff !important;
-			color: #ffd80e !important;
+			color: #dcae73 !important;
 		}
 footer .NL .Notfication {
 	display: none
@@ -6186,7 +6186,7 @@ footer .no-margin{
 	float: left;
 	margin: 3px;
 	padding: 8px 6px;
-	background: #ffd80e;
+	background: #dcae73;
 	color: #66000b;
 	font-size: 11px;
 }
@@ -6228,10 +6228,10 @@ footer .no-margin{
 	padding-bottom: 10px;
 	white-space: nowrap;
 	font-size: 15px;
-	color: #ffd80e;
+	color: #dcae73;
 }
 .copyrights a {
-	color: #ffd80e;
+	color: #dcae73;
 	text-decoration: underline;
 }
 .copyrights a:hover {
@@ -6250,7 +6250,7 @@ footer .no-margin{
 .social-list li a {
 	display: block;
 	padding: 0;
-	color: #ffd80e;
+	color: #dcae73;
 }
 .social-list li span {
 	display: block;
