--- a/YDev.Admin/Views/Content/Icerikler.cshtml
+++ b/YDev.Admin/Views/Content/Icerikler.cshtml
@@ -97,7 +97,7 @@
                                                 <span></span>
                                             </label>
                                         </td>
-                                        <td> @item.Menu.Name </td>
+                                        <td> @item.Category.Name </td>
                                         <td> @item.Title </td>
                                         <td> @item.Spot</td>
                                         <td> @item.RecordDate</td>
