--- a/YDev.Admin/Views/Content/IcerikEkle.cshtml
+++ b/YDev.Admin/Views/Content/IcerikEkle.cshtml
@@ -39,7 +39,7 @@
                             </div>
                             <div class="form-group col-md-6">
                                 <label>Kategori</label>
-                                <select id="menuId" class="form-control">
+                                <select id="categoryId" class="form-control">
                                     @foreach (var item in categories)
                                     {
                                         if (Model.CategoryId == item.Id)
