--- a/YDev.Admin/Views/Shared/_Layout.cshtml
+++ b/YDev.Admin/Views/Shared/_Layout.cshtml
@@ -418,7 +418,7 @@
     @if (nav.Contains("menu"))
     {
         <script src="~/assets/global/plugins/jquery-nestable/jquery.nestable.js" type="text/javascript"></script>
-        <script src="~/assets/pages/scripts/ui-nestable.min.js" type="text/javascript"></script>
+        <script src="~/assets/pages/scripts/ui-nestable.js" type="text/javascript"></script>
     }
     @if (nav.Contains("content") || nav.Contains("slider"))
     {
@@ -432,7 +432,7 @@
         <script src="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/bootstrap-confirmation/bootstrap-confirmation.min.js" type="text/javascript"></script>
         
-        <script src="~/assets/custom/icerikekle.min.js" type="text/javascript"></script>
+        <script src="~/assets/custom/icerikekle.js" type="text/javascript"></script>
         <script src="~/assets/custom/slider.js" type="text/javascript"></script>
     }
 
