--- a/YDev.Admin/Views/Content/Kategoriler.cshtml
+++ b/YDev.Admin/Views/Content/Kategoriler.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using YDev.Common.Models
+@model List<Category>
+@{
     ViewData["Title"] = "Kategoriler";
 }
 
@@ -19,8 +21,73 @@
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BASE CONTENT -->
+
+        <div class="row">
+            <div class="col-md-12">
+                <!-- BEGIN EXAMPLE TABLE PORTLET-->
+                <div class="portlet light bordered">
+                  
+                    <div class="portlet-body">
+
+                        <div class="row">
+
+                            <div class="form-group col-md-6">
+                                <label>Kategori Adı</label>
+                                <input class="form-control spinner" type="text" id="name" placeholder="Kampanyalar  gibi..." />
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>Link</label>
+                                <input type="text" class="form-control" id="link" placeholder="/hakkimizda   gibi...">
+                            </div>
+                            <div class="form-group col-md-12 right">
+                                <a href="javascript:;" id="kategori_kaydet" data-category-id=0 class="btn green right">Kaydet</a>
+                                <a href="javascript:;" id="vazgec" class="btn default right hidden">Vazgeç</a>
+                            </div>
+                        </div>
+
+                        <hr />
+                        <div class="clearfix"></div>
+
+                        <table class="table table-striped table-bordered table-hover table-checkable order-column" id="sample_1">
+                            <thead>
+                                <tr>
+                                    <th> Kategori </th>
+                                    <th> Link </th>
+                                    <th> İşlem </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                    <tr class="odd gradeX">
+                                        <td id="name-@item.Id"> @item.Name </td>
+                                        <td id="link-@item.Id"> @item.Link </td>
+                                        <td>
+                                            <div>
+                                                <a href="javascript:;" data-category-id="@item.Id" class="btn btn-xs green editCategory" type="button" aria-expanded="false">
+                                                    <i class="fa fa-edit"></i>
+                                                </a>
+                                            </div>
+                                        </td>
+                                    </tr>
+                                }
+
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+                <!-- END EXAMPLE TABLE PORTLET-->
+            </div>
+        </div>
+
         <!-- END PAGE BASE CONTENT -->
     </div>
     <!-- END CONTENT BODY -->
 </div>
 <!-- END CONTENT -->
+
+@section scripts
+{
+  <script type="text/javascript" src="~/assets/custom/category.js"></script>
+}
