--- a/YDev.Admin/Views/Iletisim/Index.cshtml
+++ b/YDev.Admin/Views/Iletisim/Index.cshtml
@@ -1,4 +1,9 @@
-﻿@{
+﻿@using YDev.Common.Models
+@using YDev.Common.Enum
+@using Newtonsoft.Json
+
+@model List<Contact>
+@{
     ViewData["Title"] = "İletişim Bilgileri";
 }
 
@@ -19,6 +24,111 @@
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BASE CONTENT -->
+
+        <div class="row">
+            <div class="col-md-12">
+                <!-- BEGIN SAMPLE FORM PORTLET-->
+                <div class="portlet light bordered">
+                    <div class="portlet-body">
+                        <div class="row">
+
+                            <div class="form-group col-md-6">
+                                <label>Adres Adı</label>
+                                <input class="form-control spinner" type="text" id="name" placeholder="Merkez Ofis  gibi..." />
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>Adres Tipi</label>
+                                <select id="contactType" class="form-control">
+                                    <option value="1">Merkez</option>
+                                    <option selected value="1">Şube</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-md-12">
+                                <label>Adres</label>
+                                <textarea class="form-control" id="address" rows="3"></textarea>
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Ülke</label>
+                                <input type="text" class="form-control" id="country">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>İl</label>
+                                <input type="text" class="form-control" id="city">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>İlçe</label>
+                                <input type="text" class="form-control" id="town">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Telefon</label>
+                                <input type="text" class="form-control" id="phone">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Fax</label>
+                                <input type="text" class="form-control" id="fax">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>E-posta</label>
+                                <input type="text" class="form-control" id="email">
+                            </div>
+                            <div class="form-group col-md-4">
+                                <label>Harita Linki</label>
+                                <input type="text" class="form-control" id="mapUrl">
+                            </div>
+
+                            <div class="form-group col-md-12 right">
+                                <a href="javascript:;" id="contact_save" data-contact-id=0 class="btn green right">Kaydet</a>
+                                <a href="javascript:;" id="vazgec" class="btn default right hidden">Vazgeç</a>
+                            </div>
+                        </div>
+
+                        <hr />
+                        <div class="clearfix"></div>
+
+                        <table class="table table-striped table-bordered table-hover table-checkable order-column" id="sample_1">
+                            <thead>
+                                <tr>
+                                    <th> Adres Adı </th>
+                                    <th> Adres Tipi</th>
+                                    <th> Adres </th>
+                                    <th> Ülke / İl / İlçe</th>
+                                    <th> Telefon </th>
+                                    <th> E-posta </th>
+                                    <th> İşlem </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in Model)
+                                {
+                                <tr class="odd gradeX">
+                                    <td> @item.Name </td>
+                                    <td> @(((ContactTypes)item.ContactType).ToString()) </td>
+                                    <td> @item.Address </td>
+                                    <td> @item.Country / @item.City / @item.Town </td>
+                                    <td> @item.Phone </td>
+                                    <td> @item.EMail </td>
+                                    <td>
+                                        <div>
+                                            <a href="javascript:;" data-contact="@JsonConvert.SerializeObject(Model)" data-contact-id="@item.Id" class="btn btn-xs green editContact" type="button" aria-expanded="false">
+                                                <i class="fa fa-edit"></i>
+                                            </a>
+                                            <a href="javascript:;" data-contact-id="@item.Id" class="btn btn-xs red removeContact" type="button" aria-expanded="false">
+                                                <i class="fa fa-remove"></i>
+                                            </a>
+                                        </div>
+                                    </td>
+                                </tr>
+                                }
+
+                            </tbody>
+                        </table>
+
+                    </div>
+                </div>
+                <!-- END SAMPLE FORM PORTLET-->
+            </div>
+        </div>
+
         <!-- END PAGE BASE CONTENT -->
     </div>
     <!-- END CONTENT BODY -->
