--- a/YDev.Admin/Views/Shared/_Layout.cshtml
+++ b/YDev.Admin/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     {
         <link href="~/assets/global/plugins/jquery-nestable/jquery.nestable.css" rel="stylesheet" type="text/css" />
     }
-    @if (nav.Contains("content") || nav.Contains("slider"))
+    @if (nav.Contains("content") || nav.Contains("slider") || nav.Contains("iletisim"))
     {
         <link href="~/assets/global/plugins/datatables/datatables.min.css" rel="stylesheet" type="text/css" />
         <link href="~/assets/global/plugins/datatables/plugins/bootstrap/datatables.bootstrap.css" rel="stylesheet" type="text/css" />
@@ -420,7 +420,7 @@
         <script src="~/assets/global/plugins/jquery-nestable/jquery.nestable.js" type="text/javascript"></script>
         <script src="~/assets/pages/scripts/ui-nestable.min.js" type="text/javascript"></script>
     }
-    @if (nav.Contains("content") || nav.Contains("slider"))
+    @if (nav.Contains("content") || nav.Contains("slider") || nav.Contains("iletisim"))
     {
         <script src="~/assets/global/scripts/datatable.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/datatables/datatables.min.js" type="text/javascript"></script>
@@ -431,9 +431,10 @@
         <script src="~/assets/pages/scripts/components-editors.min.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/bootstrap-fileinput/bootstrap-fileinput.js" type="text/javascript"></script>
         <script src="~/assets/global/plugins/bootstrap-confirmation/bootstrap-confirmation.min.js" type="text/javascript"></script>
-        
+
         <script src="~/assets/custom/icerikekle.min.js" type="text/javascript"></script>
         <script src="~/assets/custom/slider.js" type="text/javascript"></script>
+        <script src="~/assets/custom/contact.js" type="text/javascript"></script>
     }
 
     <!-- END PAGE LEVEL SCRIPTS -->
