--- a/YDev.Admin/Views/SosyalMedya/Index.cshtml
+++ b/YDev.Admin/Views/SosyalMedya/Index.cshtml
@@ -19,6 +19,45 @@
         </div>
         <!-- END PAGE HEAD-->
         <!-- BEGIN PAGE BASE CONTENT -->
+
+        <div class="row">
+            <div class="col-md-12">
+                <div class="portlet light bordered">
+                    <div class="portlet-body">
+
+                        <div class="row">
+
+                            <div class="form-group">
+                                <label class="col-sm-4"><i class="fa fa-instagram"></i> www.instagram.com/</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" id="instagram">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-4"><i class="fa fa-facebook"></i> www.facebook.com/</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" id="facebook">
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label class="col-sm-4"><i class="fa fa-twitter"></i> www.twitter.com/</label>
+                                <div class="col-sm-8">
+                                    <input type="text" class="form-control" id="twitter">
+                                </div>
+                            </div>
+                            
+                            <div class="col-md-12">
+                                <a href="javascript:;" id="sosyalmedya_ekle" class="btn green right"><i class="fa fa-save"></i> Kaydet</a>
+                            </div>
+                        </div>
+
+                    </div>
+
+                </div>
+            </div>
+
+        </div>
+
         <!-- END PAGE BASE CONTENT -->
     </div>
     <!-- END CONTENT BODY -->
